[package]
name = "rdl"
version = "0.3.0"
authors = ["nm <mnkisala@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mnkisala/rdl"
description = "dmenu launcher for .desktop files"
readme = "README.md"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10"
yaml-rust = "0.4"
